deployment-with-cofig-map.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-python-app
  labels:
    app: sample-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-python-app
  template:
    metadata:
      labels:
        app: sample-python-app
    spec:
      containers:
      - name: python-app
        # image: pavan0077/spring-basic-docker:v1
        image: abhishekf5/python-sample-app-demo:v1
        ports:
        # - containerPort: 8123
        - containerPort: 8000
